Fixed tab-content overflow problem with chosen dropdown

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -61,6 +61,9 @@
 }
 
 /*========== Bootstrap overrides ==========*/
+.tab-content {
+  overflow:visible;
+}
 #map-canvas img,
 .map-canvas img{
   max-width:none;
